Djentle Django day 1

--- a/archives.html
+++ b/archives.html
@@ -43,6 +43,9 @@
 
 <dl>
 
+    <dt>Sat 11 August 2012</dt>
+    <dd><a href="./djentle-django-day-1.html">Djentle Django Day 1</a></dd>
+
     <dt>Wed 08 August 2012</dt>
     <dd><a href="./workshop-meeting-1.html">Workshop Meeting #1</a></dd>
 
