--- a/workshop-meeting-1.html
+++ b/workshop-meeting-1.html
@@ -139,6 +139,16 @@ throwing together a Github Pages account with a little bit of content.</p>
         </footer><!-- /#contentinfo -->
 
 
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    try {
+        var pageTracker = _gat._getTracker("UA-28498410-3");
+    pageTracker._trackPageview();
+    } catch(err) {}</script>
+
 
 
 </body>
