--- a/images/djentle1/index.html
+++ b/images/djentle1/index.html
@@ -1,10 +1,10 @@
 <h1>Picutres index</h1>
-<a href="djentle1/11/IMG_4339.JPG">IMG_4339.JPG</a>
-<a href="djentle1/11/IMG_4340.JPG">IMG_4340.JPG</a>
-<a href="djentle1/11/IMG_4341.JPG">IMG_4341.JPG</a>
-<a href="djentle1/11/IMG_4342.JPG">IMG_4342.JPG</a>
-<a href="djentle1/11/IMG_4343.JPG">IMG_4343.JPG</a>
-<a href="djentle1/11/IMG_4344.JPG">IMG_4344.JPG</a>
-<a href="djentle1/12/IMG_4345.JPG">IMG_4345.JPG</a>
-<a href="djentle1/12/IMG_4344.JPG">IMG_4346.JPG</a>
-<a href="djentle1/12/IMG_4343.JPG">IMG_4347.JPG</a>
+<a href="11/IMG_4339.JPG">IMG_4339.JPG</a>
+<a href="11/IMG_4340.JPG">IMG_4340.JPG</a>
+<a href="11/IMG_4341.JPG">IMG_4341.JPG</a>
+<a href="11/IMG_4342.JPG">IMG_4342.JPG</a>
+<a href="11/IMG_4343.JPG">IMG_4343.JPG</a>
+<a href="11/IMG_4344.JPG">IMG_4344.JPG</a>
+<a href="12/IMG_4345.JPG">IMG_4345.JPG</a>
+<a href="12/IMG_4344.JPG">IMG_4346.JPG</a>
+<a href="12/IMG_4343.JPG">IMG_4347.JPG</a>
